Data moved to separate file

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             </div>
         </article>
     </main>
-    <script src="jquery-3.4.1min.js"></script>
-    <script src="script.js"></script>
+    <script src="js/libs/jquery-3.4.1min.js"></script>
+    <script type="module" src="js/script.js"></script>
 </body>
 
 </html>
